# neuromotor

./: .gitignore  README.md  phase1_run.py  pyproject.toml
archive/: pyproject.toml  test_inject.py
archive/neuromotor_auth/: __init__.py  cli.py
archive/neuromotor_auth/core/: engine.py
archive/neuromotor_auth/ml/: model.py  pipeline.py
archive/neuromotor_auth/telemetry/: daemon_manager.py  keyboard_listener.py
corpus_callosum/: README.md  main.py  pyproject.toml  server.py
corpus_callosum/brain/: amygdala.py  broca.py  callosum.py  cerebellum.py  frontal_lobe.py  hippocampus.py  llm.py  logic.py  parietal.py  prefrontal.py  security.py  state.py  syntax.py  temporal.py  wernicke.py
frontend/: package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/src/: App.tsx  Brain3D.tsx  index.css
neuromotor_auth/api/: server.py
neuromotor_auth/defense/: os_lock.py
neuromotor_auth/ml/: model.py
neuromotor_auth/telemetry/: __init__.py  buffer.py  mouse_listener.py
scripts/: run_server.py
