[project]
name = "neuromotor-auth"
version = "0.1.0"
description = "Continuous Authentication via Behavioral Biometrics"
readme = "README.md"
requires-python = ">=3.11"

[project.dependencies]
pynput = ">=1.7.6"
numpy = ">=1.26.0"
pandas = ">=2.2.0"
scikit-learn = ">=1.4.0"
joblib = ">=1.3.0"
fastapi = ">=0.100.0"
uvicorn = ">=0.23.0"
sse-starlette = ">=1.6.0"
pydantic = ">=2.0.0"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.3.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
