[project]
name = "neuromotor-auth"
version = "0.1.0"
description = "Continuous Authentication via Behavioral Biometrics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pynput>=1.7.6",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.3.1",
]

[project.scripts]
neuromotor = "neuromotor_auth.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["neuromotor_auth*"]
